Kubernetes/Kubernetes-manifest/azure-board.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-board-processor
  namespace: uat-knowhow
  labels:
    app: azure-board-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-board-processor
  template:
    metadata:
      labels:
        app: azure-board-processor
    spec:
      # initContainers:
      # # - name: init-mongodb
      # #   image: busybox:1.28
      # #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      containers:
      - name: azure-board-processor
        image: psknowhow/azure-board-processor:8.1.1
        imagePullPolicy: Always
        volumeMounts:
            - name: knowhow-secrets-store
              mountPath: "/mnt/uat-secrets-store"
              readOnly: true
      volumes:
        - name: knowhow-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "uat-secretproviderclass"
              
        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
        ports:
        - containerPort: 50017
        readinessProbe:
          tcpSocket:
            port: 50017
          initialDelaySeconds: 10   # Wait for 10 seconds before starting probes
          periodSeconds: 5          # Check every 5 seconds
        livenessProbe:
          tcpSocket:
            port: 50017
          initialDelaySeconds: 15
          periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: azure-board-processor
  namespace: uat-knowhow
spec:
  selector:
    app: azure-board-processor
  ports:
    - protocol: TCP
      port: 50017
      targetPort: 50017
