Kubernetes/Kubernetes-manifest/azure-repo.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: azure-pipeline-repo
  namespace: uat-knowhow
  labels:
    app: azure-pipeline-repo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: azure-pipeline-repo
  template:
    metadata:
      labels:
        app: azure-pipeline-repo
    spec:
      # initContainers:
      # # - name: init-mongodb
      # #   image: busybox:1.28
      # #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      containers:
      - name: azure-pipeline-repo
        image: psknowhow/azure-pipeline-repo:8.1.1
        imagePullPolicy: Always
        volumeMounts:
            - name: knowhow-secrets-store
              mountPath: "/mnt/uat-secrets-store"
              readOnly: true
      volumes:
        - name: knowhow-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "uat-secretproviderclass"

        resources:
          requests:
            memory: "1Gi"
            cpu: "0.5"
        ports:
        - containerPort: 50015
        - containerPort: 50016

---
apiVersion: v1
kind: Service
metadata:
  name: azure-pipeline-repo
  namespace: uat-knowhow
spec:
  selector:
    app: azure-pipeline-repo
  ports:
    - protocol: TCP
      port: 50015
      targetPort: 50015
      name: azurepipeline
    - protocol: TCP
      port: 50016
      targetPort: 50016
      name: azurerepository
