Kubernetes/Kubernetes-manifest/customapi.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customapi
  namespace: uat-knowhow
  labels:
    app: customapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customapi
  template:
    metadata:
      labels:
        app: customapi
    spec:
      # initContainers:
      # - name: init-mongodb
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      containers:
        - name: customapi
          image: speedtools.azurecr.io/knowhow-customapi:10.0.0-SNAPSHOT
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: "1Gi"
              cpu: "0.5"
          # readinessProbe:
          #   tcpSocket:
          #     port: 8080
          #   initialDelaySeconds: 10   # Wait for 10 seconds before starting probes
          #   periodSeconds: 5          # Check every 5 seconds
          # livenessProbe:
          #   tcpSocket:
          #     port: 8080
          #   initialDelaySeconds: 15
          #   periodSeconds: 20
          volumeMounts:
            - name: knowhow-secrets-store
              mountPath: "/mnt/uat-secrets-store"
              readOnly: true
      volumes:
        - name: knowhow-secrets-store
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "uat-secretproviderclass"
---
apiVersion: v1
kind: Service
metadata:
  name: customapi
  namespace: uat-knowhow
spec:
  selector:
    app: customapi
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
