Kubernetes/Kubernetes-manifest/kafka-consumers.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-consumers
  namespace: uat-knowhow
  labels:
    app: kafka-consumers
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka-consumers
  template:
    metadata:
      labels:
        app: kafka-consumers
    spec:
      # initContainers:
      # # - name: init-mongodb
      # #   image: busybox:1.28
      # #   command: ['sh', '-c', "until nslookup mongodb.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for mongodb; sleep 2; done"]
      # - name: init-customapi
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup customapi.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for customapi; sleep 2; done"]
      # - name: init-ui
      #   image: busybox:1.28
      #   command: ['sh', '-c', "until nslookup ui-knowhow.$(cat /var/run/secrets/kubernetes.io/serviceaccount/namespace).svc.cluster.local; do echo waiting for ui-knowhow; sleep 2; done"]
      containers:
      - name: kafka-consumers
        image: speedtools.azurecr.io/knowhow-kafka-consumers:8.3.2-SNAPSHOT
        # env:
        #     - name: spring.data.mongodb.uri
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: uatknhdbconnectionstring
        #     - name: spring.data.mongodb.host
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: uatknhdbhost
            
        #     - name: aesEncryptionKey
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: knowhowaesEncryptionKey
        #     - name: auth.secret
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: knowhow-auth-secret

        #     - name: spring.data.mongodb.username
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: uatknhdbusername
        #     - name: spring.data.mongodb.password
        #       valueFrom:
        #         secretKeyRef:
        #           name: knowhow-config-credentials
        #           key: uatknhdbpassword
        #     - name: mongock.migration-scan-package
        #       value: com.publicissapient.kpidashboard.apis.mongock.installation
        # envFrom:
        # - configMapRef:
        #     name: knowhow-config

        ports:
        - containerPort: 50020
        # resources:
        #   requests:
        #     memory: "1Gi"
        #     cpu: "0.5"
        # readinessProbe:
        #   tcpSocket:
        #     port: 50020
        #   initialDelaySeconds: 10   # Wait for 10 seconds before starting probes
        #   periodSeconds: 5          # Check every 5 seconds
        # livenessProbe:
        #   tcpSocket:
        #     port: 50020
        #   initialDelaySeconds: 15
        #   periodSeconds: 20

---
apiVersion: v1
kind: Service
metadata:
  name: kafka-consumers
  namespace: uat-knowhow
spec:
  selector:
    app: kafka-consumers
  ports:
    - protocol: TCP
      port: 50020
      targetPort: 50020
