Kubernetes/Kubernetes-manifest/ingress-stage-jenkins.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    appgw.ingress.kubernetes.io/appgw-ssl-certificate: wildcard-tools-publicos-sapient-com
  name: jenkins 
  namespace: stage-build
  labels:
    app.kubernetes.io/managed-by: Helm
  annotations:
    meta.helm.sh/release-name: jenkins
    meta.helm.sh/release-namespace: stage-build
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: buildspeedtool.tools.publicis.sapient.com 
    http:
      paths:
      - backend:
          service:
            name: jenkins
            port:
              number: 8080
        path: /
        pathType: Exact
status:
  loadBalancer:
    ingress:
    - ip: 13.94.97.252
